unpackaged/main/default/objects/Opportunity/fields/Contract_Balance__c.field-meta.xml
<CustomField>
    <fullName>Contract_Balance__c</fullName>
    <formula>AnyWare_Monthly_Total__c *  Remaining_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>