unpackaged/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <formula>Contract_Start_Date__c + ((Anyware_Term_Months__c /12)*365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>