unpackaged/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <displayFormat>C-{0}</displayFormat>
    <label>Opportunity/Contract Number</label>
    <type>AutoNumber</type>
</CustomField>