unpackaged/main/default/objects/Opportunity/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <inlineHelpText>The date the contract will renew based upon the Close Date and the Contract Term.</inlineHelpText>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>