unpackaged/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>CloseDate + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>