unpackaged/main/default/objects/Opportunity/fields/Contract_Total__c.field-meta.xml
<CustomField>
    <fullName>Contract_Total__c</fullName>
    <formula>If(ISPICKVAL(Sale_Type__c, "AnyWare"),( AnyWare_Monthly_Total__c  *  Anyware_Term_Months__c ),
If(ISPICKVAL(Sale_Type__c, "TSP"),TSP_Funding_Amount__c,
If(ISPICKVAL(Sale_Type__c, "Cash"),Cash_Opportunity_Total__c,
If(ISPICKVAL(Sale_Type__c, "AnyWare Support Only"),(AE_Opportunity_Total__c),
0.00))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>