unpackaged/main/default/objects/Opportunity/fields/Count_of_Revenue_Sharing_Commision_Rec__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Revenue_Sharing_Commision_Rec__c</fullName>
    <label>Count of Revenue Sharing Commision Rec</label>
    <summaryFilterItems>
        <field>Commissions__c.Commission_Type__c</field>
        <operation>equals</operation>
        <value>Revenue Sharing-Comm3</value>
    </summaryFilterItems>
    <summaryForeignKey>Commissions__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>