unpackaged/main/default/objects/Opportunity/fields/Disable_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Disable_Term_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Term Discount</label>
    <type>Checkbox</type>
</CustomField>