unpackaged/main/default/objects/Opportunity/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Discounts</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>