unpackaged/main/default/objects/Opportunity/fields/Document_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Contract_Number__c</fullName>
    <label>Document Contract Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>