unpackaged/main/default/objects/Opportunity/fields/DSCORGPKG__Converted_from_Discoverorg_Data__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Converted_from_Discoverorg_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Discoverorg Data</label>
    <type>Checkbox</type>
</CustomField>