unpackaged/main/default/objects/Opportunity/fields/Edit_AnyWare_Lease_Rate_Manually__c.field-meta.xml
<CustomField>
    <fullName>Edit_AnyWare_Lease_Rate_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit AnyWare Lease Rate Manually</label>
    <type>Checkbox</type>
</CustomField>