unpackaged/main/default/objects/Opportunity/fields/Edit_Billing_Group_Manually__c.field-meta.xml
<CustomField>
    <fullName>Edit_Billing_Group_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable auto-fill of the "Opportunity Product Billing Group" fields from the "Product Billing Group" field when the record is created or edited. This will allow for manual editing of the "Opportunity Product Billing Group" field.</inlineHelpText>
    <label>Edit Billing Group Manually</label>
    <type>Checkbox</type>
</CustomField>