unpackaged/main/default/objects/Opportunity/fields/Edit_Opportunity_Amount_Manually__c.field-meta.xml
<CustomField>
    <fullName>Edit_Opportunity_Amount_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Opportunity Amount Manually</label>
    <type>Checkbox</type>
</CustomField>