unpackaged/main/default/objects/Opportunity/fields/Est_Completion_Period__c.field-meta.xml
<CustomField>
    <fullName>Est_Completion_Period__c</fullName>
    <formula>TEXT(YEAR( Estimated_Cut_over_Date__c  )) +"/"+ LPAD(TEXT(MONTH( Estimated_Cut_over_Date__c )),2,"0")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Completion Period</label>
    <type>Text</type>
</CustomField>