unpackaged/main/default/objects/Opportunity/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <label>Estimated Completion Date (depreciated)</label>
    <type>Date</type>
</CustomField>