unpackaged/main/default/objects/Opportunity/fields/Expected_Port_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Port_Date__c</fullName>
    <label>Expected Port Date</label>
    <type>Date</type>
</CustomField>