unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiber Terminal</label>
    <referenceTo>Fiber_Terminal__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>