unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_Address__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Address__c</fullName>
    <formula>Fiber_Terminal__r.Street_Address__c + " " +  Fiber_Terminal__r.City__c + " " +  Fiber_Terminal__r.State__c  + " " +  Fiber_Terminal__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Address</label>
    <type>Text</type>
</CustomField>