unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_CLLI__c</fullName>
    <formula>Fiber_Terminal__r.Serving_Wire_Center_CLLI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal CLLI</label>
    <type>Text</type>
</CustomField>