unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Completion_Date__c</fullName>
    <formula>text( Fiber_Terminal__r.Completion_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Completion Date</label>
    <type>Text</type>
</CustomField>