unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_CPL__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_CPL__c</fullName>
    <formula>Fiber_Terminal__r.CPL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal CPL</label>
    <type>Text</type>
</CustomField>