unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Equipment_Type__c</fullName>
    <formula>Fiber_Terminal__r.Equipment_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Equipment Type</label>
    <type>Text</type>
</CustomField>