unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_Provider__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Provider__c</fullName>
    <formula>Fiber_Terminal__r.Service_Provider__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Provider</label>
    <type>Text</type>
</CustomField>