unpackaged/main/default/objects/Opportunity/fields/Fiber_Terminal_Status__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Terminal_Status__c</fullName>
    <formula>Fiber_Terminal__r.Fiber_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiber Terminal Status</label>
    <type>Text</type>
</CustomField>