unpackaged/main/default/objects/Opportunity/fields/First_Billing_Cash_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Billing_Cash_Receipt_Date__c</fullName>
    <description>For Comm3 Commissions</description>
    <label>First Billing Cash Receipt Date</label>
    <type>Date</type>
</CustomField>