unpackaged/main/default/objects/Opportunity/fields/Funding_Flag__c.field-meta.xml
<CustomField>
    <fullName>Funding_Flag__c</fullName>
    <defaultValue>'20161231'</defaultValue>
    <description>Determines proper funding calculation.</description>
    <label>Funding Flag</label>
    <length>8</length>
    <type>Text</type>
</CustomField>