unpackaged/main/default/objects/Opportunity/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>GA FlexiTel</fullName>
            </value>
            <value>
                <fullName>GA Lease</fullName>
            </value>
            <value>
                <fullName>IPro Lease</fullName>
            </value>
            <value>
                <fullName>IPro Managed Services</fullName>
            </value>
            <value>
                <fullName>Mitel TSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>