unpackaged/main/default/objects/Opportunity/fields/GA_Funding_Factor__c.field-meta.xml
<CustomField>
    <fullName>GA_Funding_Factor__c</fullName>
    <formula>IF( AnyWare_CPE_Total__c&gt;=AnyWare_Term_2016__r.GA_Rate_3_Payment_Threshold__c, AnyWare_Term_2016__r.GA_Rate_3__c, 
IF( AnyWare_CPE_Total__c&gt;=AnyWare_Term_2016__r.GA_Rate_2_Payment_Threshold__c,  AnyWare_Term_2016__r.GA_Rate_3__c, 
IF(AnyWare_CPE_Total__c&gt;=AnyWare_Term_2016__r.GA_Rate_1_Payment_Threshold__c,
AnyWare_Term_2016__r.GA_Rate_2__c,
IF(AnyWare_CPE_Total__c&gt;0.00,
AnyWare_Term_2016__r.GA_Rate_1__c,1.00))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA Funding Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>