unpackaged/main/default/objects/Opportunity/fields/I_Am_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>I_Am_Project_Manager__c</fullName>
    <formula>if( $User.Id =  OP_Project_Manager__c  ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am Project Manager</label>
    <type>Checkbox</type>
</CustomField>