unpackaged/main/default/objects/Opportunity/fields/Independent_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Independent_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Independent Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Account)</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>