unpackaged/main/default/objects/Opportunity/fields/Install_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Install_Date_Completed__c</fullName>
    <label>Install Date Completed</label>
    <type>Date</type>
</CustomField>