unpackaged/main/default/objects/Opportunity/fields/Install_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Install_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to verify record sent to Install</description>
    <label>Install Record Created</label>
    <type>Checkbox</type>
</CustomField>