unpackaged/main/default/objects/Opportunity/fields/Install_Status__c.field-meta.xml
<CustomField>
    <fullName>Install_Status__c</fullName>
    <defaultValue>"New"</defaultValue>
    <label>Install Status (Depreciated)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>