unpackaged/main/default/objects/Opportunity/fields/Installer_1__c.field-meta.xml
<CustomField>
    <fullName>Installer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>