unpackaged/main/default/objects/Opportunity/fields/Installer_2__c.field-meta.xml
<CustomField>
    <fullName>Installer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>