unpackaged/main/default/objects/Opportunity/fields/Installer_3__c.field-meta.xml
<CustomField>
    <fullName>Installer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>