unpackaged/main/default/objects/Opportunity/fields/Installers_Calendar_Event_Completion__c.field-meta.xml
<CustomField>
    <fullName>Installers_Calendar_Event_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Installers Calendar Event Added</description>
    <label>Installers Calendar Event Completion</label>
    <type>Checkbox</type>
</CustomField>