unpackaged/main/default/objects/Opportunity/fields/IPro_Flag__c.field-meta.xml
<CustomField>
    <fullName>IPro_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPro Flag</label>
    <type>Checkbox</type>
</CustomField>