unpackaged/main/default/objects/Opportunity/fields/LH__LH_Test_1__c.field-meta.xml
<CustomField>
    <fullName>LH__LH_Test_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LH_Test_1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LH Test Opp 2 Account 1</relationshipLabel>
    <relationshipName>LH_Opp_Acc_1</relationshipName>
    <type>Lookup</type>
</CustomField>