unpackaged/main/default/objects/Opportunity/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>