unpackaged/main/default/objects/Opportunity/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Contract</label>
    <referenceTo>Master_Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>