unpackaged/main/default/objects/Opportunity/fields/Master_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Name__c</fullName>
    <formula>Master_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Contract Name</label>
    <type>Text</type>
</CustomField>