unpackaged/main/default/objects/Opportunity/fields/Master_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Number__c</fullName>
    <displayFormat>MC-{0000000}</displayFormat>
    <label>Master Contract Number</label>
    <type>AutoNumber</type>
</CustomField>