unpackaged/main/default/objects/Opportunity/fields/Mitel_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Mitel_MSRP__c</fullName>
    <label>Mitel MSRP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>