unpackaged/main/default/objects/Opportunity/fields/Mitel_Net__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Net__c</fullName>
    <formula>IF( ISPICKVAL( Sale_Type__c , "Anyware" ), (AnyWare_Net_CPE_Funding_Amount__c  *  Probability)  * 0.48 ,( Opportunity_Amount__c   *  Probability)  * 0.48)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mitel Net $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>