unpackaged/main/default/objects/Opportunity/fields/Mitel_Opportunity_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Opportunity_Registration_Date__c</fullName>
    <label>Mitel Opportunity Registration Date</label>
    <type>Date</type>
</CustomField>