unpackaged/main/default/objects/Opportunity/fields/Mitel_Product_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Product_Order_Date__c</fullName>
    <label>Mitel Product Order Date</label>
    <type>Date</type>
</CustomField>