unpackaged/main/default/objects/Opportunity/fields/Monthly_Recurring_Billing_Comm3__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Billing_Comm3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Recurring Billing Comm3</label>
    <type>Checkbox</type>
</CustomField>