unpackaged/main/default/objects/Opportunity/fields/Monthly_Support_Total__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Support_Total__c</fullName>
    <formula>0.00</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Support Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>