unpackaged/main/default/objects/Opportunity/fields/MSC_Count__c.field-meta.xml
<CustomField>
    <fullName>MSC_Count__c</fullName>
    <label>MSC Count</label>
    <summaryForeignKey>Managed_Services_Contract__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>