unpackaged/main/default/objects/Opportunity/fields/Net_Annual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_Annual_Commission__c</fullName>
    <formula>Annual_Commission__c  +  Annual_Commission_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Annual Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>