unpackaged/main/default/objects/Opportunity/fields/Net_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Monthly_Amount__c</fullName>
    <formula>Amount- Recast_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>