unpackaged/main/default/objects/Opportunity/fields/Net_Opportunity_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Opportunity_Booking_Amount__c</fullName>
    <formula>Opportunity_Booking_Amount__c  -  Bokking_Chargebacks_Payoffs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Opportunity Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>