unpackaged/main/default/objects/Opportunity/fields/Net_Quarterly_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_Quarterly_Commission__c</fullName>
    <formula>Quarterly_Commission__c  +  Quarterly_Commission_Adjustments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Quarterly Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>