unpackaged/main/default/objects/Opportunity/fields/NOBA__c.field-meta.xml
<CustomField>
    <fullName>NOBA__c</fullName>
    <formula>Net_Opportunity_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Opp Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>