unpackaged/main/default/objects/Opportunity/fields/Non_Quota_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Non_Quota_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Quota Opportunity</label>
    <type>Checkbox</type>
</CustomField>