unpackaged/main/default/objects/Opportunity/fields/Number_Days_Close_to_Install__c.field-meta.xml
<CustomField>
    <fullName>Number_Days_Close_to_Install__c</fullName>
    <formula>IF  (Install_Date_Completed__c &gt; date(2015,01,01), Install_Date_Completed__c -  CloseDate, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Days Close to Install</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>