unpackaged/main/default/objects/Opportunity/fields/Numeric_Term__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Term__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Numeric Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>