unpackaged/main/default/objects/Opportunity/fields/Operations_Category__c.field-meta.xml
<CustomField>
    <fullName>Operations_Category__c</fullName>
    <label>Operations Category (depreciated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>MAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>