unpackaged/main/default/objects/Opportunity/fields/OPP_Billed_Difference__c.field-meta.xml
<CustomField>
    <fullName>OPP_Billed_Difference__c</fullName>
    <formula>Opportunity_Booking_Amount__c - Billing_Total_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Billed Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>