unpackaged/main/default/objects/Opportunity/fields/Opp_Book_Amt__c.field-meta.xml
<CustomField>
    <fullName>Opp_Book_Amt__c</fullName>
    <formula>Opportunity_Booking_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>