unpackaged/main/default/objects/Opportunity/fields/OPP_Recurring_Billing_Count__c.field-meta.xml
<CustomField>
    <fullName>OPP_Recurring_Billing_Count__c</fullName>
    <label>OPP Recurring Billing Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>