unpackaged/main/default/objects/Opportunity/fields/OPP_Status__c.field-meta.xml
<CustomField>
    <fullName>OPP_Status__c</fullName>
    <formula>IF(  Estimated_Cut_over_Date__c &lt;= TODAY(), IMAGE("/servlet/servlet.FileDownload?file=0151W000003Jlak", "Green"),IMAGE("/servlet/servlet.FileDownload?file=0151W000003Jlau", "Red"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>