unpackaged/main/default/objects/Opportunity/fields/Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amount__c</fullName>
    <label>Opportunity Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>