unpackaged/main/default/objects/Opportunity/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <description>Short description of the purpose of the Opportunity.</description>
    <inlineHelpText>Short description of the purpose of the Opportunity. Limited to 40 characters.</inlineHelpText>
    <label>Opportunity Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>