unpackaged/main/default/objects/Opportunity/fields/Opportunity_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Net_Value__c</fullName>
    <formula>Opportunity_Amount__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>