unpackaged/main/default/objects/Opportunity/fields/Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total__c</fullName>
    <formula>Mitel_MSRP__c  +  Other_MSRP__c  -  Discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>