unpackaged/main/default/objects/Opportunity/fields/Opportunity_Workgroup__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Workgroup__c</fullName>
    <label>Opportunity Workgroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>