unpackaged/main/default/objects/Opportunity/fields/Opporunity_Billing_Count__c.field-meta.xml
<CustomField>
    <fullName>Opporunity_Billing_Count__c</fullName>
    <label>Opporunity Billing Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>