unpackaged/main/default/objects/Opportunity/fields/OPS_Category__c.field-meta.xml
<CustomField>
    <fullName>OPS_Category__c</fullName>
    <label>OPS Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
                <color>#009900</color>
                <label>INSTALLATION</label>
            </value>
            <value>
                <fullName>ICN</fullName>
                <color>#3366FF</color>
                <label>ICN</label>
            </value>
            <value>
                <fullName>MAC</fullName>
                <color>#FF6600</color>
                <label>MAC</label>
            </value>
            <value>
                <fullName>RECAST</fullName>
                <color>#000099</color>
                <label>RECAST</label>
            </value>
            <value>
                <fullName>Post Installation</fullName>
                <color>#000000</color>
                <label>POST INSTALLATION</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>