unpackaged/main/default/objects/Opportunity/fields/Other_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Other_MSRP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other MSRP</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>