unpackaged/main/default/objects/Opportunity/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to flag Opportunities that need IPro Managed Services Contracts built.</description>
    <label>PF</label>
    <type>Checkbox</type>
</CustomField>