unpackaged/main/default/objects/Opportunity/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <label>Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Proposal</fullName>
            </value>
            <value>
                <fullName>Alternate Proposal</fullName>
            </value>
            <value>
                <fullName>Inactive Proposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>