unpackaged/main/default/objects/Opportunity/fields/Project_Manager_RD__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_RD__c</fullName>
    <description>Used to show PM on the detail lines on group by PM reports</description>
    <formula>OP_Project_Manager__r.FirstName + " " +  OP_Project_Manager__r.LastName</formula>
    <label>Project Manager (RD)</label>
    <type>Text</type>
</CustomField>