unpackaged/main/default/objects/Opportunity/fields/Project_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Project_Next_Step__c</fullName>
    <label>Project Next Steps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>